--- a/d3dx.ini
+++ b/d3dx.ini
@@ -1,10 +1,8 @@
-[Logging]
-calls=0
+[Dump]
+;log=1
+;bin=1
 
-[Rendering]
-export_binary=0
-
-[StereoSettings]
-StereoSeparation=100
-StereoConvergence=1.0
-ScreenSize=15.6
+[Stereo]
+convergence=1.0
+separation=50
+screenSize=55
