Add devoce vtable

--- a/D3D10/D3D10.vcxproj.filters
+++ b/D3D10/D3D10.vcxproj.filters
@@ -50,4 +50,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="ID3D10DeviceVtbl.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
